# mb2docx

./: .gitignore  README.md  build_exe.bat  launcher.py  pyproject.toml  run.bat  run.vbs  run_cli.bat  run_exe.bat
.github/workflows/: ci.yml
examples/: cl.md  cv.md
scripts/: analyze_exemplar.py  build_exe.ps1  run_dev.ps1
src/mb2docx/: __init__.py  clean.py  cli.py  config.py  docx_writer.py  gui.py  logging_utils.py  model.py  parser.py  pipeline.py
tests/: test_clean.py  test_parser.py  test_parser_grok.py  test_parser_v6.py
